# nucleo_g0b1re_play

./: .gitignore  Cargo.toml  Embed.toml  build.rs  memory.x
logs/: servo_tester_STM32G0B1RETx_1697358612767_channel0.txt
src/: lib.rs
src/lib/: cli.rs  lib.rs  vt100.rs
