[package]
authors = ["Isaikin Roman <romix.lab@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "nucleo-g0b1re-play"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
rtt-target = "0.4.0"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

[dependencies.stm32g0xx-hal]
features = ["stm32g081", "rt"]
version = "0.2.0"

[lib]
name = "common"
path = "src/lib.rs"

# this lets you use `cargo fix`!
[[bin]]
name = "servo_tester"
test = false
bench = false

[build-dependencies]
built = { version = "0.7", features = ["chrono", "git2"] }

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
